add: init foundations
- functions

--- a/DL_01.ipynb
+++ b/DL_01.ipynb
@@ -1,9 +1,63 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a35d9d75-1c95-412b-88c4-8809fcf23f4d",
+   "metadata": {},
+   "source": [
+    "# 1. Foundations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "612ba55b-88cd-4b8b-9697-b089901a4cd1",
+   "metadata": {},
+   "source": [
+    "* A neural network is a computational graph through which multidimensional arrays flow\n",
+    "* A neural network is an universl function approximator that can is theory represent the solution to any supervised learning problem "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8338d319-103c-47ed-8fcc-923070bb43fe",
+   "metadata": {},
+   "source": [
+    "## Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cfbbd309-bfb4-40a9-9fe0-589f5c6b54cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x):\n",
+    "    return max(x,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "16ebaaa2-50a3-49f2-bad7-9fb91e48f606",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f(-2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9140d60e-37f8-4a32-af3a-816398c57c52",
+   "id": "e30c6d8f-73ee-4e3b-ad9d-695e6fec16d1",
    "metadata": {},
    "outputs": [],
    "source": []
