add: axis intution

--- a/DL_01.ipynb
+++ b/DL_01.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "cfbbd309-bfb4-40a9-9fe0-589f5c6b54cc",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "16ebaaa2-50a3-49f2-bad7-9fb91e48f606",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e30c6d8f-73ee-4e3b-ad9d-695e6fec16d1",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "f35ec2b0-6c76-4e0e-9516-2c73b36f25da",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "21e4488c-ab96-4e79-9788-45e14a72ce5d",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "0edfe4b2-699f-42dc-a25b-b3fadf9e9144",
    "metadata": {},
    "outputs": [
@@ -203,13 +203,240 @@
     "a = np.array([[1,2,3], [4,5,6]])\n",
     "b = np.array([10,20,30])\n",
     "\n",
+    "\n",
+    "\n",
     "print(\"a+b: \\n\", a+b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ca21129-73bd-4855-b50f-dec48500501b",
+   "metadata": {},
+   "source": [
+    "## Axes intution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57ea41f2-7bb3-414b-8a07-2d6ca1ef9ddc",
+   "metadata": {},
+   "source": [
+    "While summing the specified axis, it **collapses** the particular axis.\n",
+    "e.g. `a.sum(axis=0)` collapses the row axis and hence sums up columns to output one row only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "31d2e8ba-b1bd-427d-8771-fdb44c11e5c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([[[1,2],[3,4]],[[1,2],[3,4]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2c6a558b-0113-47c3-a654-3bc88c57e751",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2],\n",
+       "        [3, 4]],\n",
+       "\n",
+       "       [[1, 2],\n",
+       "        [3, 4]]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5eaa0fae-107b-431b-9dc4-50c789ae9835",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 2, 2)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5b0b5d7f-1af2-414c-9774-53349efffd66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0]  # axis 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a29ce216-c6dd-42fa-b824-1aacbbc4a435",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[1] # axis 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "40e5d22c-d509-49cb-bb60-a8b8a5c1fa4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0][0] # axis 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e829040a-1d9f-4d2b-a792-be6e1ae463ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(1)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0][0][0] # axis 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "376a73b5-b9e3-4c0b-99e2-9189f987f1b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 4],\n",
+       "       [6, 8]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(x, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ab88c9f2-0d1b-42c5-a964-a1fba81cb220",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 6],\n",
+       "       [4, 6]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(x, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d945be23-96b1-47f3-bcd3-a88d4db661e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 7],\n",
+       "       [3, 7]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(x, axis=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeb73d81-f801-4798-af1a-b4b86c8fc137",
+   "id": "0d2de330-2b56-4fea-93c4-82adb9c1b70c",
    "metadata": {},
    "outputs": [],
    "source": []
